# VulkanRenderer

./: .gitignore  README.md
.github/workflows/: msbuild.yml
VulkanRenderer/: CMakeLists.txt  CMakeSettings.json
VulkanRenderer/Resources/: CMakeLists.txt
VulkanRenderer/Resources/DefaultResources/: CMakeLists.txt
VulkanRenderer/Resources/Shaders/: CMakeLists.txt  DiffNorm.frag  DiffNorm.vert  DiffNormSpec.Frag.spv  DiffNormSpec.frag  DiffNormSpec.vert  Diffuse.frag  DiffuseShadow.Frag.spv  DiffuseShadow.frag  DiffuseShadow.vert  DiffuseUnshaded.frag  DiffuseUnshaded.vert  NormalMap.Vert.spv  NormalMap.frag  Skybox.Vert.spv  Skybox.vert  Specular.Vert.spv  Specular.frag  Specular.vert  Test.Vert.spv  Test.frag
VulkanRenderer/VulkanRenderer2D/: CMakeLists.txt  Config.json
VulkanRenderer/VulkanRenderer2D/Engine/: ConfigManager.cpp  ConfigManager.h  D2DEngine.cpp  DDM2Engine.cpp  DDM2Engine.h  Singleton.h  Window.cpp  Window.h  main.cpp
VulkanRenderer/VulkanRenderer2D/Engine Files/: ConfigManager.h  D2DEngine.h  Window.h
VulkanRenderer/VulkanRenderer2D/Includes/: ImGuiIncludes.h  STBIncludes.h
VulkanRenderer/VulkanRenderer2D/Vulkan/: DispatchableManager.cpp  DispatchableManager.h  Vulkan2D.cpp  Vulkan2D.h  VulkanRenderer2D.cpp  VulkanRenderer2D.h
VulkanRenderer/VulkanRenderer3D/: CMakeLists.txt  Config.json
VulkanRenderer/VulkanRenderer3D/DataTypes/: Camera.cpp  Camera.h  DirectionalLightObject.cpp  DirectionalLightObject.h  Structs.h
VulkanRenderer/VulkanRenderer3D/Engine/: ConfigManager.cpp  ConfigManager.h  D3DEngine.cpp  D3DEngine.h  DDM3Engine.cpp  DDM3Engine.h  Singleton.h  TimeManager.cpp  TimeManager.h  Window.cpp  Window.h  main.cpp
VulkanRenderer/VulkanRenderer3D/Includes/: ImGuizmoIncludes.h  STBIncludes.cpp
VulkanRenderer/VulkanRenderer3D/Utils/: Utils.cpp  Utils.h
VulkanRenderer/VulkanRenderer3D/Vulkan/: Vulkan3D.cpp  Vulkan3D.h  VulkanUtils.cpp  VulkanUtils.h
source/: CMakeLists.txt  HelloTriangleApplication.cpp  HelloTriangleApplication.h  Renderer.cpp  Renderer.h  Structs.h  Utils.cpp  Utils.h  VulkanRenderer.sln  main.cpp  source.sln  source.vcxproj  source.vcxproj.filters  stdafx.h
source/Resources/DefaultResources/: Default.Frag.spv  Default.Vert.spv  Shadow.Vert.spv
source/Resources/Models/: cube.mtl
source/Resources/Shaders/: DiffNorm.Frag.spv  Diffuse.Frag.spv  Diffuse.Vert.spv  DiffuseShadow.Vert.spv  DiffuseUnshaded.Frag.spv  NormalMap.Frag.spv  Skybox.Vert.spv  Specular.Frag.spv  Test.Frag.spv
source/VulkanRasterizer/: VulkanRasterizer.cpp  VulkanRasterizer.sln  VulkanRasterizer.vcxproj  VulkanRasterizer.vcxproj.filters
source/VulkanRenderer/: Application.cpp  Application.h  D3DEngine.cpp  D3DEngine.h  DescriptorPoolManager.cpp  DescriptorPoolManager.h  DescriptorPoolWrapper.cpp  DescriptorPoolWrapper.h  DiffuseMaterial.cpp  DiffuseMaterial.h  GLFWIncludes.h  GLMIncludes.h  ImGuiIncludes.h  ImGuiWrapper.cpp  ImGuiWrapper.h  InstanceWrapper.cpp  InstanceWrapper.h  Material.cpp  Material.h  Model.cpp  Model.h  PipelineManager.cpp  Renderer.cpp  Renderer.h  STBIncludes.h  ServiceLocator.cpp  ServiceLocator.h  Singleton.h  Structs.h  TexturedMaterial.cpp  TexturedMaterial.h  TimeManager.cpp  TimeManager.h  Utils.cpp  Utils.h  VulkanHelpers.cpp  VulkanHelpers.h  VulkanRenderer.cpp  VulkanRenderer.h  imgui.ini  (+4 more)
source/VulkanRenderer/Debug/: VulkanRasterizer.exe.recipe  VulkanRenderer.exe.recipe  VulkanRenderer.ilk  vc143.idb
source/VulkanRenderer/Release/: VulkanRasterizer.exe.recipe  VulkanRasterizer.iobj  VulkanRasterizer.ipdb  VulkanRenderer.exe.recipe  VulkanRenderer.iobj  VulkanRenderer.ipdb
source/VulkanRenderer2D/: Config.json  ConfigManager.cpp  ConfigManager.h  D2DEngine.cpp  GLFWIncludes.h  GLMIncludes.h  GPUObject.h  InstanceWrapper.cpp  InstanceWrapper.h  RapidJSONIncludes.h  STBIncludes.h  Singleton.h  VulkanRenderer2D.cpp  VulkanRenderer2D.h  VulkanRenderer2D.vcxproj  VulkanRenderer2D.vcxproj.filters  Window.cpp  Window.h  main.cpp
source/VulkanRenderer2D/Engine Files/: D2DEngine.cpp
source/VulkanRenderer3D/: BufferManager.cpp  BufferManager.h  CMakeLists.txt  Camera.cpp  Camera.h  CommandpoolManager.cpp  CommandpoolManager.h  Config.json  ConfigManager.cpp  ConfigManager.h  CubeMapMaterial.cpp  CubeMapMaterial.h  D3DEngine.cpp  D3DEngine.h  DescriptorObject.cpp  DescriptorObject.h  DescriptorPoolManager.cpp  DescriptorPoolManager.h  DescriptorPoolWrapper.cpp  DescriptorPoolWrapper.h  DirectionalLightObject.cpp  DirectionalLightObject.h  GLFWIncludes.h  GPUObject.cpp  GPUObject.h  ImGuiWrapper.cpp  ImGuiWrapper.h  ImageManager.cpp  ImageManager.h  ImageViewManager.cpp  ImageViewManager.h  InstanceWrapper.cpp  InstanceWrapper.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  PipelineManager.cpp  (+44 more)
source/VulkanRenderer3D/DataTypes/: Camera.cpp  Camera.h  DirectionalLightObject.h
source/VulkanRenderer3D/Engine/: D3DEngine.cpp  TimeManager.cpp  TimeManager.h  Window.h  main.cpp
source/VulkanRenderer3D/Includes/: GLMIncludes.h
source/VulkanRenderer3D/Utils/: Utils.cpp  Utils.h
source/VulkanRenderer3D/Vulkan/: VulkanUtils.h
source/x64/Debug/: VulkanRasterizer.exe.recipe  VulkanRasterizer.ilk  renderer.obj.enc  source.exe.recipe  source.ilk  source.vcxproj.FileListAbsolute.txt  vc143.idb
source/x64/Release/: VulkanRasterizer.iobj  VulkanRasterizer.ipdb  source.vcxproj.FileListAbsolute.txt
(+183 files in other folders)
